--- a/requirements.txt
+++ b/requirements.txt
@@ -1,188 +1,10 @@
-aiohappyeyeballs                         2.4.4
-aiohttp                                  3.11.8
-aiosignal                                1.3.1
-altair                                   5.5.0
-annotated-types                          0.7.0
-anyio                                    4.6.2.post1
-asgiref                                  3.8.1
-attrs                                    24.2.0
-backoff                                  2.2.1
-bcrypt                                   4.2.1
-beautifulsoup4                           4.12.3
-blinker                                  1.9.0
-build                                    1.2.2.post1
-cachetools                               5.5.0
-certifi                                  2024.8.30
-charset-normalizer                       3.4.0
-chroma-hnswlib                           0.7.6
-chromadb                                 0.5.20
-click                                    8.1.7
-colorama                                 0.4.6
-coloredlogs                              15.0.1
-dataclasses-json                         0.6.7
-Deprecated                               1.2.15
-distro                                   1.9.0
-docstring_parser                         0.16
-durationpy                               0.9
-faiss-cpu                                1.9.0.post1
-fastapi                                  0.115.5
-filelock                                 3.16.1
-filetype                                 1.2.0
-flatbuffers                              24.3.25
-frozenlist                               1.5.0
-fsspec                                   2024.10.0
-gitdb                                    4.0.11
-GitPython                                3.1.43
-google-ai-generativelanguage             0.6.10
-google-api-core                          2.23.0
-google-api-python-client                 2.154.0
-google-auth                              2.36.0
-google-auth-httplib2                     0.2.0
-google-cloud-aiplatform                  1.73.0
-google-cloud-bigquery                    3.27.0
-google-cloud-core                        2.4.1
-google-cloud-resource-manager            1.13.1
-google-cloud-storage                     2.18.2
-google-crc32c                            1.6.0
-google-generativeai                      0.8.3
-google-resumable-media                   2.7.2
-googleapis-common-protos                 1.66.0
-greenlet                                 3.1.1
-grpc-google-iam-v1                       0.13.1
-grpcio                                   1.68.0
-grpcio-status                            1.68.0
-h11                                      0.14.0
-httpcore                                 1.0.7
-httplib2                                 0.22.0
-httptools                                0.6.4
-httpx                                    0.27.2
-httpx-sse                                0.4.0
-huggingface-hub                          0.13.0
-humanfriendly                            10.0
-idna                                     3.10
-importlib_metadata                       8.5.0
-importlib_resources                      6.4.5
-InstructorEmbedding                      1.0.1
-Jinja2                                   3.1.4
-jiter                                    0.8.0
-joblib                                   1.4.2
-jsonpatch                                1.33
-jsonpointer                              3.0.0
-jsonschema                               4.23.0
-jsonschema-specifications                2024.10.1       
-kubernetes                               31.0.0
-langchain                                0.3.9
-langchain-chroma                         0.1.4
-langchain-community                      0.3.9
-langchain-core                           0.3.21
-langchain-google-genai                   2.0.6
-langchain-google-vertexai                2.0.8
-langchain-huggingface                    0.1.1
-langchain-ollama                         0.2.0
-langchain-openai                         0.2.10
-langchain-text-splitters                 0.3.2
-langchainhub                             0.1.21
-langsmith                                0.1.147
-markdown-it-py                           3.0.0
-MarkupSafe                               3.0.2
-marshmallow                              3.23.1
-mdurl                                    0.1.2
-mmh3                                     5.0.1
-monotonic                                1.6
-mpmath                                   1.3.0
-multidict                                6.1.0
-mypy-extensions                          1.0.0
-narwhals                                 1.15.2
-networkx                                 3.4.2
-nltk                                     3.9.1
-numpy                                    1.26.4
-oauthlib                                 3.2.2
-ollama                                   0.4.2
-onnxruntime                              1.20.1
-openai                                   1.55.3
-opentelemetry-api                        1.28.2
-opentelemetry-exporter-otlp-proto-common 1.28.2
-opentelemetry-exporter-otlp-proto-grpc   1.28.2
-opentelemetry-instrumentation            0.49b2
-opentelemetry-instrumentation-asgi       0.49b2
-opentelemetry-instrumentation-fastapi    0.49b2
-opentelemetry-proto                      1.28.2
-opentelemetry-sdk                        1.28.2
-opentelemetry-semantic-conventions       0.49b2
-opentelemetry-util-http                  0.49b2
-orjson                                   3.10.12
-overrides                                7.7.0
-packaging                                24.2
-pandas                                   2.2.3
-pillow                                   11.0.0
-pip                                      24.3.1
-posthog                                  3.7.4
-propcache                                0.2.0
-proto-plus                               1.25.0
-protobuf                                 5.29.0
-pyarrow                                  18.1.0
-pyasn1                                   0.6.1
-pyasn1_modules                           0.4.1
-pydantic                                 2.9.2
-pydantic_core                            2.23.4
-pydantic-settings                        2.6.1
-pydeck                                   0.9.1
-Pygments                                 2.18.0
-pyparsing                                3.2.0
-PyPika                                   0.48.9
-pyproject_hooks                          1.2.0
-pyreadline3                              3.5.4
-python-dateutil                          2.9.0.post0     
-python-dotenv                            1.0.1
-pytz                                     2024.2
-PyYAML                                   6.0.2
-referencing                              0.35.1
-regex                                    2024.11.6       
-requests                                 2.32.3
-requests-oauthlib                        2.0.0
-requests-toolbelt                        1.0.0
-rich                                     13.9.4
-rpds-py                                  0.22.1
-rsa                                      4.9
-safetensors                              0.4.5
-scikit-learn                             1.5.2
-scipy                                    1.14.1
-sentence-transformers                    2.2.2
-sentencepiece                            0.2.0
-setuptools                               75.2.0
-shapely                                  2.0.6
-shellingham                              1.5.4
-six                                      1.16.0
-smmap                                    5.0.1
-sniffio                                  1.3.1
-soupsieve                                2.6
-SQLAlchemy                               2.0.35
-starlette                                0.41.3
-streamlit                                1.40.2
-sympy                                    1.13.1
-tenacity                                 9.0.0
-threadpoolctl                            3.5.0
-tiktoken                                 0.8.0
-tokenizers                               0.13.3
-toml                                     0.10.2
-torch                                    2.5.1
-torchvision                              0.20.1
-tornado                                  6.4.2
-tqdm                                     4.67.1
-transformers                             4.28.0
-typer                                    0.14.0
-types-requests                           2.32.0.20241016
-typing_extensions                        4.12.2
-typing-inspect                           0.9.0
-tzdata                                   2024.2
-uritemplate                              4.1.1
-urllib3                                  2.2.3
-uvicorn                                  0.32.1
-watchdog                                 6.0.0
-watchfiles                               1.0.0
-websocket-client                         1.8.0
-websockets                               14.1
-wheel                                    0.44.0
-wrapt                                    1.17.0
-yarl                                     1.18.0
-zipp                                     3.21.0
+langchain==0.0.280
+langchain-google-genai
+langchain-huggingface
+langchain-chroma
+langchain-community
+dotenv==1.0.0
+chromadb==0.4.0
+sentence-transformers==2.2.2
+streamlit==1.25.0
+Pillow==10.1.0
