--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-langchain==0.0.280
+langchain
 langchain-google-genai
 langchain-huggingface
 langchain-chroma
 langchain-community
-dotenv==1.0.0
-chromadb==0.4.0
-sentence-transformers==2.2.2
-streamlit==1.25.0
-Pillow==10.1.0
+dotenv
+chromadb
+sentence-transformers
+streamlit
+Pillow
